fix issue with next button below fold on small laptops and next button hover feature on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,12 +10,9 @@ body {
     height: 100vh
 }
 
-header {
-    height: 75px;
-margin-bottom: 20px;
-}
-
 .heading {
+    height: 60px;
+    margin: 30px;
     text-transform: uppercase;
     color: white;
     text-align: center;
@@ -95,7 +92,6 @@ input {
 
     width: 320px;
     height: 60px;
-
     font-size: 2em;
 
 }
@@ -309,14 +305,6 @@ footer {
      
 }
 
-.answers {
-    height: 120px;
-    width: 300px;
-    margin: 10px;
-    border: solid 2px black;
-    border-radius: 10px;
-}
-
 }
 
 @media only screen and (max-width: 950px) {
@@ -336,8 +324,8 @@ footer {
 }
     
 .answers {
-    height: 120px;
-    width: 200px;
+    height: 80px;
+    width: 250px;
     margin: 10px;
     border: solid 2px black;
     border-radius: 10px;
@@ -434,16 +422,13 @@ input {
 }
 
 .btn:hover {
-
-    width: 170px;
-    height: 40px;
-    font-size: 1.3em;
-
+    height: 30px;
+    width: 150px;
+    font-size: 1.1em;
 }
 
 .rules ol li {
     font-size: 0.7rem;
-
 }
         
             }
